cert-manager/limit-dnsnames/cert-good.yaml
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  name: acme-crt
spec:
  secretName: acme-crt-secret
  dnsNames:
  - example.com
  issuerRef:
    name: acme-prod
    kind: Issuer
    group: cert-manager.io
