cert-manager/limit-dnsnames/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cert-manager-limit-dnsnames
status:
  ready: true
