cert-manager/limit-dnsnames/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: limit-dnsnames
spec:
  steps:
  - name: step-01
    try:
    - script:
        content: |
          set -e
          sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' limit-dnsnames.yaml \
            | kubectl create -f -
    - assert:
        file: chainsaw-step-01-assert-1.yaml
    - assert:
        file: chainsaw-step-01-assert-2.yaml
  - name: step-02
    try:
    - apply:
        file: cert-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: cert-bad.yaml
  - name: step-99
    try:
    - delete:
        ref:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          name: cert-manager-limit-dnsnames
